syntax = "proto3";

option php_namespace = "Proto\\BoilerService";
option php_metadata_namespace = "Proto\\Metadata";

package BoilerServicePackage;

service BoilerService {
  rpc Ping (PingRequest) returns (PingResponse);
}

message PingRequest {
}

message PingResponse {
    string message = 1;
}